add navbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ NO ABUSAR DE:
   --color-customWhite: #fff;
   --color-customRed: #bf0411;
   --color-customBlack: #000000;
-  --color-customGray: #f06a6a;
+  --color-customGray: #6a6a6a;
   --color-customLigth-blue: #37a5dd;
   --color-customDark-blue: #166193;
   --color-customSoft-blue: #8fd8fd;
